@@ -17,7 +17,7 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "predis/predis": "0.8.*@stable",
+        "predis/predis": "~0.8.3@stable",
         "silex/silex": "1.0.*@dev"
     }
 }
