@@ -3,6 +3,8 @@ v0.4.1 (2013-03-19)
     of `Predis\ClientInterface` returned by the provider when creating a new
     client object.
 
+  * Minimum required version of Predis is now v0.8.3.
+
 v0.4.0 (2013-02-03)
   * The service provider now requires Predis v0.8.
 
